--- a/ci/windows-x86_64-shared/Dockerfile
+++ b/ci/windows-x86_64-shared/Dockerfile
@@ -14,8 +14,16 @@ FROM base AS gdk
 COPY tools/buildgdk.sh tools/
 RUN . /root/.cargo/env && tools/buildgdk.sh
 RUN apt install -yqq mingw-w64-tools
-RUN gendef build/gdk/build-windows-mingw-w64/src/libgreen_gdk.dll
-RUN cp libgreen_gdk.def depends/windows-x86_64/lib
+RUN install -d $PREFIX/bin
+RUN install build/gdk/build-windows-mingw-w64/src/libgreen_gdk.dll $PREFIX/bin
+RUN cd $PREFIX/bin && gendef libgreen_gdk.dll
+
+FROM base as libserialport
+COPY tools/buildlibserialport.sh tools/buildlibserialport.sh tools/
+RUN tools/buildlibserialport.sh
+RUN apt install -yqq mingw-w64-tools
+RUN cd $PREFIX/bin && gendef libserialport-0.dll
 
 FROM base
 COPY --from=gdk /depends /depends
+COPY --from=libserialport /depends /depends
