--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -23,7 +23,6 @@ macos-arm64:build:
   extends:
     - .macos-arm64
     - .build
-  needs: ["macos-arm64:depends"]
   after_script:
     - mkdir macos-arm64
     - mv build/"Blockstream.app" macos-arm64
@@ -31,7 +30,7 @@ macos-arm64:build:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
     paths:
-      - "macos-arm64/Blockstream.app"
+      - macos-arm64/Blockstream.app
 
 macos-arm64:staple:
   tags:
@@ -44,10 +43,11 @@ macos-arm64:staple:
     paths:
       - "macos-arm64/Blockstream.app"
       - "macos-arm64/Blockstream.dmg"
-  needs: ["macos-arm64:build"]
+  needs:
+    - macos-arm64:build
   script:
-    - mv "macos-arm64/Blockstream.app" "Blockstream.app"
-    - tools/macos-staple.sh "Blockstream.app"
-    - tools/packdmg.sh "Blockstream.app"
-    - tools/macos-staple.sh "Blockstream.dmg"
-    - mv "Blockstream.app" "Blockstream.dmg" macos-arm64/
+    - mv macos-arm64/Blockstream.app Blockstream.app
+    - tools/macos-staple.sh Blockstream.app
+    - tools/packdmg.sh Blockstream.app
+    - tools/macos-staple.sh Blockstream.dmg
+    - mv Blockstream.app Blockstream.dmg macos-arm64/
