--- a/ci/macos-x86_64.yml
+++ b/ci/macos-x86_64.yml
@@ -23,15 +23,14 @@ macos-x86_64:build:
   extends:
     - .macos-x86_64
     - .build
-  needs: ["macos-x86_64:depends"]
   after_script:
     - mkdir macos-x86_64
-    - mv build/"Blockstream.app" macos-x86_64
+    - mv build/Blockstream.app macos-x86_64
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
     paths:
-      - "macos-x86_64/Blockstream.app"
+      - macos-x86_64/Blockstream.app
 
 macos-x86_64:staple:
   tags:
@@ -42,12 +41,13 @@ macos-x86_64:staple:
     expire_in: 1 week
     when: always
     paths:
-      - "macos-x86_64/Blockstream.app"
-      - "macos-x86_64/Blockstream.dmg"
-  needs: ["macos-x86_64:build"]
+      - macos-x86_64/Blockstream.app
+      - macos-x86_64/Blockstream.dmg
+  needs:
+    - macos-x86_64:build
   script:
-    - mv "macos-x86_64/Blockstream.app" "Blockstream.app"
-    - tools/macos-staple.sh "Blockstream.app"
-    - tools/packdmg.sh "Blockstream.app"
-    - tools/macos-staple.sh "Blockstream.dmg"
-    - mv "Blockstream.app" "Blockstream.dmg" macos-x86_64/
+    - mv macos-x86_64/Blockstream.app Blockstream.app
+    - tools/macos-staple.sh Blockstream.app
+    - tools/packdmg.sh Blockstream.app
+    - tools/macos-staple.sh Blockstream.dmg
+    - mv Blockstream.app Blockstream.dmg macos-x86_64/
