--- a/ci/windows-x86_64-shared.yml
+++ b/ci/windows-x86_64-shared.yml
@@ -101,6 +101,7 @@ windows-x86_64-shared:sign:
     paths:
       - bld/installer.iss
       - bld/Release
+  when: manual
 
 windows-x86_64-shared:installer:
   image:
@@ -135,4 +136,4 @@ windows-x86_64-shared:sign-installer:
     - windows-x86_64-shared:installer
   variables:
     INPUT_FILE: Setup.exe
-    OUTPUT_FILE: "BlockstreamSetup.exe"
+    OUTPUT_FILE: BlockstreamSetup.exe
