--- a/ci/macos-x86_64.yml
+++ b/ci/macos-x86_64.yml
@@ -1,13 +1,12 @@
 .macos-x86_64:
+  extends:
+    - .macos
   variables:
     PREFIX: "$CI_PROJECT_DIR/depends/macos-x86_64"
-    HOST: "macos"
     ARCH: "x86_64"
-    SHA256SUM: "shasum -a 256"
     PKG_CONFIG_PATH: "$PREFIX/lib/pkgconfig"
     CMAKE_INSTALL_PREFIX: "$PREFIX"
     gdk_ROOT: "$PREFIX/lib/x86_64-apple-darwin/gdk"
-    MACOSX_DEPLOYMENT_TARGET: 12.0
   cache:
     key: macos_x86_64_28
     paths: [depends/]
@@ -33,9 +32,8 @@ macos-x86_64:build:
       - macos-x86_64/Blockstream.app
 
 macos-x86_64:staple:
-  tags:
-    - osxsigner
-  stage: staple
+  extends:
+    - .macos:staple
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 week
