ci: install only required packages on linux shared

--- a/ci/linux-x86_64-shared/Dockerfile
+++ b/ci/linux-x86_64-shared/Dockerfile
@@ -12,9 +12,8 @@ RUN curl -L -O https://download.qt.io/official_releases/online_installers/qt-onl
 RUN chmod +x qt-online-installer-linux-x64-online.run
 ARG QT_INSTALLER_JWT_TOKEN
 ENV QT_INSTALLER_JWT_TOKEN=${QT_INSTALLER_JWT_TOKEN}
-RUN ./qt-online-installer-linux-x64-online.run --root /qt --accept-licenses --default-answer --confirm-command --accept-obligations install qt6.8.3-full-dev
+RUN ./qt-online-installer-linux-x64-online.run --root /qt --accept-licenses --default-answer --confirm-command --accept-obligations install qt.qt6.683.linux_gcc_64 qt.qt6.683.addons.qt5compat qt.qt6.683.addons.qtconnectivity qt.qt6.683.addons.qtmultimedia qt.qt6.683.addons.qtserialport qt.qt6.683.addons.qtconnectivity
 ENV PATH="/qt/6.8.3/gcc_64/bin/:$PATH"
-RUN apt install -yqq libnss3-dev libasound2-dev libxdamage-dev libxkbfile-dev
 
 FROM base AS hidapi
 COPY tools/buildlibusb.sh tools/buildhidapi.sh tools/
