ci: delete depends folder before build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ sast:
   before_script:
     - export PATH="$PREFIX/bin:$PATH"
   script:
+    - rm -rf $PREFIX
     - tools/buildgdk.sh --static
     - tools/buildbreakpad.sh
     - tools/buildcrashpad.sh
