ci: pass envs to windows build script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,11 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+message(STATUS "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
+message(STATUS "GREEN_ENV = ${GREEN_ENV}")
+message(STATUS "GREEN_BUILD_ID = ${GREEN_BUILD_ID}")
+message(STATUS "GREEN_LOG_FILE = ${GREEN_LOG_FILE}")
+
 if(NOT GREEN_ENV)
     set(CMAKE_BUILD_TYPE Debug)
     set(GREEN_ENV Development)
