build: set compile option -Wno-elaborated-enum-base on macos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ if (WIN32)
     #set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++ -fstack-protector")
 elseif (APPLE)
     find_library(SECURITY Security REQUIRED)
+    add_compile_options(-Wno-elaborated-enum-base)
 elseif (UNIX)
     if (QT_FEATURE_static)
         find_library(AVCODEC NAMES libavcodec.a REQUIRED)
